--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             font-weight: bold;
         }
         .hero {
-            background: url('https://i.imgur.com/eJ7hVzE.jpeg') no-repeat center center/cover;
+            background: url('https://i.imgur.com/vn8atfy.jpeg') no-repeat center center/cover;
             height: 60vh;
             color: var(--light-color);
             display: flex;
