--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                         <a href="tel:+34697255086" class="cta-button">Llamar Ahora</a>
                     </div>
                     <div>
-                        <img src="https://i.imgur.com/kS9Q14B.jpeg" alt="Taxi en Palacio Miramar" class="experience-img">
+                        <img src="https://i.imgur.com/I7DAlcc.jpeg" alt="Taxi en Palacio Miramar" class="experience-img">
                     </div>
                 </div>
             </div>
